Translated all elements.

--- a/src/locale/message.json
+++ b/src/locale/message.json
@@ -4,6 +4,16 @@
     "6100643244266927227": "Sigil",
     "3592408222211449988": "Create magic sigil",
     "7399382439887480462": "Graphical sigil",
+    "6944217823551411374": "Statement:",
+    "1094329684736638028": "Literal Sigil:",
+    "6398433067343351716": "Numeric Sigil:",
+    "2166216144931681376": "Reduced Numeric Sigil:",
+    "6637361193540831411": "Enter the statement here",
+    "6924206081426890825": "The statement must be positive, achievable and contain a feeling",
+    "8734285918452119903": "Select the sealing strategy",
+    "8633019657410845634": "Strategy 1",
+    "7368486415956115848": "Strategy 2",
+    "2094132015912972394": "Strategy 3",
     "6250621723864240509": "Magic Sigils",
     "1356890996281769972": "Dark mode",
     "2275328567992347600": "Page not found"
