--- a/src/locale/message.ro.json
+++ b/src/locale/message.ro.json
@@ -4,6 +4,16 @@
     "6100643244266927227": "Sigiliu",
     "3592408222211449988": "Creare sigiliu magic",
     "7399382439887480462": "Sigiliul grafic",
+    "6944217823551411374": "Afirmatia:",
+    "1094329684736638028": "Sigiliul literal:",
+    "6398433067343351716": "Sigiliul numeric:",
+    "2166216144931681376": "Sigiliul numeric condensat:",
+    "6637361193540831411": "Introduceti afirmatia aici",
+    "6924206081426890825": "Afirmatia trebuie sa fie pozitiva, realizabila si sa contina un sentiment",
+    "8734285918452119903": "Selectati strategia de sigilare",
+    "8633019657410845634": "Strategia 1",
+    "7368486415956115848": "Strategia 2",
+    "2094132015912972394": "Strategia 3",
     "6250621723864240509": "Sigilii magice",
     "1356890996281769972": "Modul intunecat",
     "2275328567992347600": "Pagina nu a fost gasita"
