--- a/src/assets/i18n/ro.json
+++ b/src/assets/i18n/ro.json
@@ -10,6 +10,11 @@
   "SIGILS" : {
     "GRAPHICAL_SIGIL": "Sigiliul grafic",
     "STATEMENT": "Afirmația",
-    "ENTER_STATEMENT": "Introduceti afirmatia aici"
+    "ENTER_STATEMENT": "Introduceti afirmatia aici",
+    "STATEMENT_DESCRIPTION": "Afirmația trebuie să fie pozitivă, realizabilă și să conțină un sentiment",
+    "LITERAL_SIGIL": "Sigiliul literal",
+    "NUMERIC_SIGIL": "Sigiliul numeric",
+    "CONDENSED_NUMERIC_SIGIL": "Sigiliul numeric condensat"
+
   }
 }
