--- a/src/assets/i18n/ro.json
+++ b/src/assets/i18n/ro.json
@@ -23,7 +23,9 @@
     "CHARGE": "Încărcare sigiliu",
     "LAUNCH": "Lansare sigiliu!",
     "SIGIL_LAUNCHED_CONFIRMATION_MESSAGE": "Sigiliul a fost lansat cu success!",
-    "SIGIL_LAUNCHED_CONFIRMATION_TITLE": "Felicitări!"
+    "SIGIL_LAUNCHED_CONFIRMATION_TITLE": "Felicitări!",
+    "SIGIL_NOT_LAUNCHED_MESSAGE": "Sigiliul NU a fost lansat",
+    "SIGIL_NOT_LAUNCHED_TITLE": "Oops!"
 
   }
 }
